refactor: replace Collectors.toList() with List.toList() for stream operations